// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render correctly 1`] = `
<div
  className="input"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <span
    className="input__label"
  >
    label
  </span>
  <input
    className="input__field"
    name="name"
    type="text"
  />
  <div
    className="input__error"
  />
</div>
`;

exports[`Input should render correctly with number 1`] = `
<div
  className="input"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <span
    className="input__label"
  >
    label
  </span>
  <NumberFormat
    allowEmptyFormatting={false}
    allowNegative={true}
    className="input__field"
    decimalScale={4}
    decimalSeparator="."
    displayType="input"
    fixedDecimalScale={true}
    getInputRef={[Function]}
    isAllowed={[Function]}
    isNumericString={true}
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseUp={[Function]}
    onValueChange={[Function]}
    prefix=""
    suffix=""
    type="text"
  />
  <div
    className="input__error"
  />
</div>
`;
